# django-backend-boiletplate

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  Justfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  skills.json
.claude/: .mcp.json  CLAUDE.md  settings.json  settings.local.json
.claude/agents/: data-seed.md  deploy-check.md  django-migrator.md  drf-view-builder.md  llm-service-expert.md  pytest-runner.md  query-optimizer.md  repo-reviewer.md  security-auditor.md
.claude/commands/: add-endpoint.md  commit.md  lint.md  migrate.md  review.md  schema-change.md  security-audit.md  seed.md  sync-skills.md  test.md
.claude/hooks/: post-tool-use-mypy.js  post-tool-use-ruff.js  pre-tool-use-secret-guard.js  session-start-load-context.js  stop-pytest-smoke.js
.claude/rules/: api-response.md  auth-security.md  database-migrations.md  error-handling.md  layered-architecture.md  llm-providers.md  logging.md  pagination.md
.claude/templates/: adr.md  api-doc.md  commit-message.md  issue.md  pr-description.md
.claude/workflows/: add-endpoint.md  data-migration-workflow.md  db-schema-change.md  performance-audit.md  refactor-workflow.md  security-review.md
.github/workflows/: ci.yml
apps/api/: __init__.py  apps.py  serializers.py  services.py  urls.py  (+1 more)
config/: asgi.py  celery.py  urls.py  wsgi.py
temporal_app/: README.md  __init__.py  activities.py  run_temporal_worker.py  workflows.py
tests/: conftest.py  factories.py  test_api.py  test_core.py  test_users.py
(+37 files in other folders)
