[project]
name = "my-api-project"
version = "0.1.0"
description = "A production-ready Django API with Celery, Temporal, and WebSockets"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<6.1",
    "django-allauth[socailaccount]>=65.0,<66.0",
    "django-allauth>=65.0,<66.0",
    "djangorestframework>=3.15.0,<4.0",
    "drf-spectacular>=0.27.0,<0.28",
    "django-cors>=5.0.0,<6.0",
    "celery>=5.4.0,<6.0",
    "redis>=5.2.0,<6.0",
    "channels[daphne]>=4.2.0,<5.0",
    "channels-redis>=4.2.0,<5.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "python-json-logger>=2.0.7,<3.0",
    "sentry-sdk>=2.0.0,<3.0",
    "temporalio>=1.7.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-django>=4.10.0,<5.0",
    "pytest-cov>=6.0.0,<7.0",
    "ruff>=0.8.0,<1.0",
    "mypy>=1.15.0,<2.0",
    "django-stubs>=5.0.0,<6.0",
    "djangorestframework-stubs>=3.15.0,<4.0",
    "pre-commit>=4.0.0,<5.0",
    "flower>=2.0.1,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
testpaths = ["tests"]
